--- a/AV/Sorting/bubblesort-av.html
+++ b/AV/Sorting/bubblesort-av.html
@@ -1,23 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>Bubblesort AV</title>
+  <title>Bubble Sort Visualization</title>
   <link rel="stylesheet" href="../opendsaAV.css" type="text/css" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="quadraticsort.css" type="text/css" />
-
 </head>
 
 <body>
 <div id="container">
   <input type="button" id="about" name="about" value="About"
-	 style="margin-top:10px;"/>
+         style="margin-top:10px;"/>
   <a class="jsavsettings" href="#">Settings</a>
-  <h1 style="">Bubble Sort Visualization</h1>
+  <h1 style="margin-top:-10px;">Bubble Sort Visualization</h1>
 
-  <form id="ssperform">
+  <form id="ssperform" style="margin-top:-5px;">
     <p>
-      <input type="button" name="run" value="Run" />
+      <input type="button" name="run" value="Run"
+             style="margin-bottom:5px;">
       <input type="button" name="reset" value="Reset" />
       <label for="arraysize">&nbsp;List size:&nbsp;</label>
       <select id="arraysize">
@@ -38,7 +38,7 @@
       <input size="60" name="arrayValues" id="arrayValues" type="text" />
     </p>
   </form>
-  <div id="avcontainer">
+  <div id="avcontainer" style="margin-top:-20px;">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
     <p class="jsavoutput jsavline" readonly="readonly"></p>
