Update JSAV to version 0.5.0-20. Added some of the new exercises to the RST modules. Fixed some library include issues with exercises.

--- a/AV/shellsort-av.html
+++ b/AV/shellsort-av.html
@@ -97,7 +97,7 @@ form {
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
 <script src="../JSAV/lib/jquery.transform.light.js"></script>
-<script src="http://algoviz.org/OpenDSA/JSAV/lib/raphael.js"></script>
+<script src="../JSAV/lib/raphael.js"></script>
 <script src="../JSAV/build/JSAV-min.js"></script>
 
 <script>
